<resources>
    <string name="app_name">GitHubUsers</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="login">login</string>
    <string name="repo">Repo</string>
    <string name="sub">Sub</string>
    <string name="org">Org</string>
    <string name="subscriptions">Subscriptions:</string>
    <string name="organizations">Organizations:</string>
</resources>